TestStressBailout triggers "Should not be locked when freed" assert

XMLWordPrintable

    • b08

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/workspace/open/src/hotspot/share/compiler/compileTask.cpp:68), pid=2387845, tid=2387871
      # assert(!task->lock()->is_locked()) failed: Should not be locked when freed
      #
      # JRE version: Java(TM) SE Runtime Environment (24.0+24) (fastdebug build 24-ea+24-2869)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-ea+24-2869, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x8f04c4] CompileTask::free(CompileTask*)+0xe4

      Stack: [0x0000ffff77a04000,0x0000ffff77c02000], sp=0x0000ffff77c000e0, free space=2032k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x8f04c4] CompileTask::free(CompileTask*)+0xe4 (compileTask.cpp:68)
      V [libjvm.so+0x8e1f20] CompileQueue::free_all()+0x70 (compileBroker.cpp:375)
      V [libjvm.so+0x8e43c4] CompileBroker::shutdown_compiler_runtime(AbstractCompiler*, CompilerThread*)+0xb4 (compileBroker.cpp:1840)
      V [libjvm.so+0x8e487c] CompileBroker::init_compiler_runtime()+0x438 (compileBroker.cpp:1794)
      V [libjvm.so+0x8eadd4] CompileBroker::compiler_thread_loop()+0x114 (compileBroker.cpp:1929)
      V [libjvm.so+0xd4cc58] JavaThread::thread_main_inner()+0xe4 (javaThread.cpp:758)
      V [libjvm.so+0x15dd4e0] Thread::call_run()+0xac (thread.cpp:232)
      V [libjvm.so+0x1317774] thread_native_entry(Thread*)+0x130 (os_linux.cpp:858)
      C [libpthread.so.0+0x7950] start_thread+0x190

      Test was added by JDK-8330157

        1. hs_err_pid2387845.log
          122 kB
          Tobias Hartmann
        2. 8343938-trigger.diff
          0.9 kB
          Theo Weidmann

            Assignee:
            Theo Weidmann (Inactive)
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: