8343938: TestStressBailout triggers "Should not be locked when freed" assert

Reviewed-by: kvn, thartmann